# systemedu

./: .coveragerc  .dockerignore  .gitignore  CLAUDE.md  KIMI.md  KIMI_MODEL_MIGRATION.md  KIMI_MODEL_MIGRATION_V2.md  README.md  docker-compose.yml  install.sh  package-lock.json  package.json  pyproject.toml  todolist.md
adminsite/: conftest.py  manage.py
adminsite-fe/: jest.config.js  package-lock.json  package.json
backend/: .env.example  conftest.py  requirements.txt
claude-code-course-gen/: README.md
course_factory/: AESTHETIC.md  GENERATION_GUIDE.md  README.md  SKILL.md  __init__.py  aesthetic_reviewer_prompt.md  factory.py  learner_qc.py  lit_tree.py  workspace_bridge.py
dighuman/: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json
docker/: Dockerfile.backend  Dockerfile.web  README.md  docker-compose.yml
docs/: README.md  character_prompts.md  prd.md  test-coverage-audit-2026-06.md  todolist.md
e2e/: playwright.config.ts
frontend/: package.json
knowledge-tree-researcher/: SKILL.md
knowledge_base_doc/: KNOWLEDGE_TREE_GENERATION.md  batch_project_knowledge_tree_prompt_v5.md  batch_project_knowledge_tree_prompt_v6.md  batch_project_knowledge_tree_prompt_v7.md  batch_project_knowledge_tree_prompt_v8.md  knowledge_tree_template_commented_v3.jsonc  knowledge_tree_template_commented_v4.jsonc  knowledge_tree_template_commented_v5.jsonc  labxchange_pathways.json
prd/: prd.md
projects/: MM01_mars_terrain_knowledge_tree_current_session_v1.json  MM01_mars_terrain_knowledge_tree_with_stage_briefs_v2.json  mars_risk_map_safe_path_knowledge_tree.json  mars_risk_map_safe_path_knowledge_tree_v8.json
scripts/: COURSE_FACTORY.md  _fix_mars_anims.py  _fix_mars_games.py  _fix_rocket_games.py  _gen_atom_lego.py  _gen_beta_sheet.py  _gen_protein_structure.py  _import_courses.sh  _test_anim_knode6_spa_loop.html  _test_anim_knode8_sensor_translator.html  _test_anim_knode9_light_journey.html  _test_anim_playwright.mjs  _test_anim_rocket_k5_three_rockets_timeline.html  _test_anim_rocket_k9_paper_fold.html  _test_anim_runtime_demo.html  _test_game_knode0_sole_lab.html  _test_game_knode10_pixel_artist.html  _test_game_knode14_rover_explorer.html  _test_game_knode2_mars_landform_classifier.html  _test_game_knode6_robot_workshop.html  _test_game_knode7_sol_planner.html  _test_game_knode9_pixel_painter.html  _test_game_mars_route.html  _test_game_mars_terrain.html  _test_game_rocket_k5_rocket_builder.html  _test_game_rocket_k6_balloon_launcher.html  _test_game_rocket_k7_history_detective.html  _test_game_rocket_k9_launch_pad.html  _test_game_terrain_dict.html  animation_runtime.js  animation_skeleton.html  backfill_slides.py  course_factory.py  crawl_labxchange_pathways.py  deploy-student.sh  deploy.env  deploy.sh  html_validate_test.mjs  import_kt_json.py  install-bootstrap.sh  (+93 more)
specs/: README.md
test-results/: .last-run.json
tests/: conftest.py  test_017_config_migration.py  test_017_e2e_llm_routing.py  test_017_gateway_config.py  test_017_v3_role_routing.py  test_019_tts_config.py  test_020_planner_streaming.py  test_024a_multiuser.py  test_agent_backend.py  test_auth.py  test_batch_lesson.py  test_builtin_agents_deepagents.py  test_capstone.py  test_career_path.py  test_cf_v3_pipeline_skeleton.py  test_cf_v3_s05_research.py  test_cf_v3_s07_labxchange.py  test_cf_v3_s10_plan.py  test_cf_v3_s15_theory.py  test_cf_v3_theme_loader.py  test_config.py  test_course.py  test_course_factory_3d_object.py  test_course_factory_research.py  test_course_factory_v41.py  test_course_v2.py  test_daemon.py  test_db_anim_game_regression.py  test_deploy_scripts.py  test_e2e_spring_physics.py  test_education.py  test_education_tools.py  test_factory_queue.py  test_frontend_manim_contract.py  test_gameagent.py  test_gateway.py  (+60 more)
tools/content-pipeline/: README.md  pyproject.toml
tools/content-pipeline/scripts/: gen_slides.py
tools/content-pipeline/src/content_pipeline/: __init__.py  blueprint.py  cli.py  compile.py  manifest.py  package.py  publish.py  workspace.py
tools/content-pipeline/tests/: test_blueprint.py  test_compile.py  test_manifest_package.py
(+1412 files in other folders)
