[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "systemedu"
version = "0.1.0"
description = "AI Agent-driven project-based learning platform"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langchain-core>=1.0",
    "langchain-openai>=1.0",
    "deepagents>=0.4.11",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "prompt_toolkit>=3.0",
    "sqlalchemy>=2.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "websockets>=13.0",
    "httpx>=0.27",
    "tavily-python>=0.5",
]

[project.optional-dependencies]
dashscope = ["dashscope>=1.0"]
mem0 = ["mem0ai>=1.0"]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
systemedu = "systemedu.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/systemedu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
