# spec 022 占位 + spec 023 Phase 3 实质实现
[project]
name = "systemedu-content-pipeline"
version = "0.1.0"
description = "Content production CLI for systemedu (blueprint sync / compile / publish / export / import)"
requires-python = ">=3.12"
dependencies = [
    # systemedu-core (workspace dep, 提供 V5 schema + course_factory)
    # "systemedu-core",  # spec 022 Phase 2 后启用
    "typer>=0.12",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
# spec 023 Phase 3 实现 cli.py 后启用
# systemedu-content = "content_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_pipeline"]
