# spec 023 Phase 3 实质实现
[project]
name = "systemedu-content-pipeline"
version = "0.1.0"
description = "Content production CLI for systemedu (blueprint sync / compile / publish / export / import)"
requires-python = ">=3.12"
dependencies = [
    "systemedu-core",
    "typer>=0.12",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
systemedu-content = "content_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_pipeline"]
